--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/03f07a101c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-warning">
         <div class="container-fluid">
             <div class="container d-flex justify-content-between ps-4">
                 <a class="navbar-brand"  href="#">
